--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,21 +7,16 @@
 @import url('./reset.css');
 @import url('./vite-promo.css');
 
-.container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
 .form {
   display: flex;
-    justify-content: center;
+  gap: 8px;
+  justify-content: center;
+  margin-bottom: 40px;
 }
 
 input {
   border-radius: 4px;
   width: 272px;
-  height: 40px;
   background: #fff;
   padding-left: 16px;
   padding-right: 16px;
@@ -57,13 +52,98 @@ button {
   color: #fff;
 }
 
-.js-image-container {
+ul,
+li {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  height: 180px;
+  width: 300px;
+}
+
+.gallery {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 10px;
+  margin: 0 auto;
+}
+
+.gallery-item{
+  border: 1px solid #808080;
+  width: calc((100% - 40px) / 5);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gallery-image:hover {
+  transform: scale(105%);
 }
 
 .image-info {
   display: flex;
-    flex-direction: row;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 10px;
 }
 
+.title {
+  display: flex;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 10px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
